font family added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+/* font family:work sans */
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family:"Work Sans", sans-serif ;
+
+    
+}
+:root{
+    /* text color */
+    --text-color-dark1:#131313;
+    --text-color-dark1:#424242;
+    --text-color-dark1:#727272;
+    /* background color */
+    --primary-bgcolor:#FF900E;
+    --secondary-bgcolor:#FF900E;
+    /* text size */
+    --primary-text-size:3rem;
+    --secondary-text-size:1rem;
+
+   
+}
+/* shared style */
+
+
+    </style>
 </head>
 <body>
     
