--- a/index.html
+++ b/index.html
@@ -84,9 +84,19 @@ main>section{
     color: var(--text-color-dark2);
 }
 .nav,.banner{
-    max-width: 1440px;
+    max-width: 100%;
     margin: 0 auto;
 }
+header{
+    width: 94%;
+   max-width: 1440px;
+    margin: auto;
+}
+main{
+    width: 80%;
+    max-width: 1240px;
+}
+
 /* responsive media query */
 @media only screen and (max-width: 570px) {
  .nav,.nav-links{
@@ -343,7 +353,7 @@ scale: 0;
         text-align: center;
 }
 .sponsor-companies{
-    
+
     display: grid;
     grid-template-columns: repeat(5,1fr);
     
@@ -432,10 +442,6 @@ Group of Architects
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
              </p>
              <!-- feature card container -->
-              <div class="feature-card">
-                <h4 class="feature-title">Dexktop & Mobile Version</h4>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-              </div>
               <div class="feature-card">
                 <h4 class="feature-title">Dexktop & Mobile Version</h4>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
