--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <!-- aos animation link -->
+         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <style>
             /* font family:work sans */
             
@@ -417,13 +419,13 @@ Group of Architects
 <main>
     <!-- teams start -->
     <section class="teams display-flex ">
-        <div  class="team-img-container">
-            <img src="images/team1.png" alt="two architect discussing about design">
-            <img src="images/team2.png" alt="two architect discussing about design">
-            <img src="images/team3.png" alt="two architect discussing about design">
-            <img src="images/team4.png" alt="two architect discussing about design">
+        <div data-aos="fade-up" class="team-img-container">
+            <img data-aos="fade-right" src="images/team1.png" alt="two architect discussing about design">
+            <img data-aos="fade-left" src="images/team2.png" alt="two architect discussing about design">
+            <img data-aos="fade-right" src="images/team3.png" alt="two architect discussing about design">
+            <img data-aos="fade-left" src="images/team4.png" alt="two architect discussing about design">
         </div>
-        <div class="our-features">
+        <div data-aos="fade-down" class="our-features">
         <h3 class="section-title"> <span>Quick list</span> <span>of Our</span><span>Features</span> </h3>
         <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
@@ -435,29 +437,29 @@ Group of Architects
     <!-- feature will enjoy start -->
      <section  class="features display-flex">
 <div>
-    <h3 class="section-title">
+    <h3  data-aos="zoom-out-left" class="section-title">
          Features you will <br> love & enjoy
     </h3>
-             <p class="section-description">
+             <p data-aos="zoom-out-right" class="section-description">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
              </p>
              <!-- feature card container -->
-              <div class="feature-card">
+              <div  data-aos="fade-up-right" class="feature-card">
                 <h4 class="feature-title">Dexktop & Mobile Version</h4>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
               </div>
-              <div class="feature-card">
+              <div data-aos="fade-up-left" class="feature-card">
                 <h4 class="feature-title">Dexktop & Mobile Version</h4>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
               </div>
-              <div class="feature-card">
+              <div  data-aos="fade-up-right" class="feature-card">
                 <h4 class="feature-title">Dexktop & Mobile Version</h4>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
               </div>
 
 </div>
 <div class="img-parent">
-    <img src="images/architect.png" alt="">
+    <img  data-aos="zoom-in-down" src="images/architect.png" alt="">
     <button class="btn-primary">
         <span>10+ Year</span>
         <br>
@@ -475,7 +477,7 @@ Group of Architects
         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
          </p>
 <div class="facts-container">
-<div class="fact-card">
+<div  data-aos="zoom-in" class="fact-card">
     <div>
 
         <img src="images/icons/ribon.png" alt="" class="fact-icon">
@@ -483,7 +485,7 @@ Group of Architects
         <h5 class="fact-name">Awards Winnings</h5>
     </div>
 </div>
-<div class="fact-card">
+<div data-aos="flip-right" class="fact-card">
     <div>
 
         <img src="images/icons/projects.png" alt="" class="fact-icon">
@@ -491,7 +493,7 @@ Group of Architects
         <h5 class="fact-name">Project Finished</h5>
     </div>
 </div>
-<div class="fact-card">
+<div  data-aos="flip-right" class="fact-card">
     <div>
 
         <img src="images/icons/customers.png" alt="" class="fact-icon">
@@ -499,7 +501,7 @@ Group of Architects
         <h5 class="fact-name">Clients Worked</h5>
     </div>
 </div>
-<div class="fact-card">
+<div  data-aos="flip-right" class="fact-card">
     <div>
 
         <img src="images/icons/email.png" alt="" class="fact-icon">
@@ -534,5 +536,10 @@ Group of Architects
 
 
     </footer>
+    <!-- aos animation script -->
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+     <script>
+  AOS.init();
+</script>
 </body>
 </html>
