--- a/index.html
+++ b/index.html
@@ -539,7 +539,10 @@ Group of Architects
     <!-- aos animation script -->
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
      <script>
-  AOS.init();
+  AOS.init({
+    offset:300,
+    duration:1000,
+  });
 </script>
 </body>
 </html>
