sponsor item animation added

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@ scale: 0;
 
     display: grid;
     grid-template-columns: repeat(5,1fr);
+    padding-bottom: 150px;
     
 }
 .sponsor-companies img{
@@ -519,11 +520,11 @@ Group of Architects
     <p class="section-descripton">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
 </div>
 <div  class="sponsor-companies">
-    <img src="images/sponsors/spotify.png" alt="">
-    <img src="images/sponsors/google.png" alt="">
-    <img src="images/sponsors/telerama.png" alt="">
-    <img src="images/sponsors/figma.png" alt="">
-    <img src="images/sponsors/amazon.png" alt="">
+    <img  data-aos="fade-right" src="images/sponsors/spotify.png" alt="">
+    <img data-aos="fade-left" src="images/sponsors/google.png" alt="">
+    <img data-aos="fade-right" src="images/sponsors/telerama.png" alt="">
+    <img data-aos="fade-left" src="images/sponsors/figma.png" alt="">
+    <img data-aos="fade-right" src="images/sponsors/amazon.png" alt="">
 
 </div>
      </section>
